Add mnemonics, correct some code

--- a/ec8-assembler/Cargo.toml
+++ b/ec8-assembler/Cargo.toml
@@ -12,6 +12,7 @@ keywords = ["chip8","emu"]
 [dependencies]
 clap = { version = "4.0.32",features=["cargo"] }
 ec8-common = {path="../ec8-common"}
+clap-common = { path = "../clap-common" }
 color-eyre = "0.6.2"
 log = "0.4.17"
 env_logger = "0.10.0"
